--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Many years a go we created this project to create some missing features on the Zend Framework.
+Many years a go we created this project to fix some missing features on the Zend Framework.
 Now this is just some old code that may be funny to someone to read and laugh.
